[gd_scene load_steps=5 format=3 uid="uid://bge7krvalhedv"]

[ext_resource type="PackedScene" uid="uid://dtnyhsyeyk6mv" path="res://scenes/active_skill.tscn" id="1_meqbd"]
[ext_resource type="Script" path="res://scripts/royal_priest/salvation_prayer.gd" id="2_8eewa"]
[ext_resource type="Texture2D" uid="uid://bygcvmw3jfes7" path="res://resources/royal_priest/skill_icon/salvation_prayer.png" id="3_w0rhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6uapu"]
size = Vector2(310, 310)

[node name="salvation_prayer" instance=ExtResource("1_meqbd")]
script = ExtResource("2_8eewa")
mana_cost = 1
skill_name = "Salvation Prayer"
description = "Heal an ally piece by 1. If the piece has only 1 health point, heal 2 instead."
initial_turn_cooldown = 3
effect_list = ["heal"]
tipo = "buff_debuff_rango"

[node name="skill_button" parent="control_button" index="0"]
icon = ExtResource("3_w0rhc")

[node name="skillArea" type="Area2D" parent="." index="4"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="skillArea" index="0"]
position = Vector2(296, 219)
shape = SubResource("RectangleShape2D_6uapu")
debug_color = Color(0.119448, 0.638243, 0.317413, 0.42)

[connection signal="body_entered" from="skillArea" to="." method="_on_skill_area_body_entered"]
[connection signal="body_exited" from="skillArea" to="." method="_on_skill_area_body_exited"]
